examples/compile-error/bad1.vc


func f(a: Int) {}

func main() {
    f("message"); // <- type mismach
}

